# FabricPC

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README_no_GPU.md  ROADMAP.md  _cuda_detect.py  hj_ot_grid_search_results.csv  jax_setup.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  notebook-parity.yml  test.yml
benchmarks/: notebook_parity_baselines.json
cl-benchmark/: PROTOCOL.aux  PROTOCOL.md  PROTOCOL.out  PROTOCOL.tex  README.md  pyproject.toml
cl-benchmark/benchmark_results/: mock_2026-04-07T16-03-38.690596.json  mock_2026-04-07T16-03-59.633164.json
cl-benchmark/src/cl_benchmark/: __init__.py  protocols.py
cl-benchmark/src/cl_benchmark/baselines/: __init__.py  base.py  ewc.py  naive.py  replay.py
cl-benchmark/src/cl_benchmark/evaluation/: __init__.py  protocol.py  results.py  runner.py
cl-benchmark/src/cl_benchmark/metrics/: __init__.py  accuracy.py  aggregators.py  forgetting.py  statistical.py
cl-benchmark/src/cl_benchmark/visualization/: __init__.py  plots.py
cl-benchmark/tests/: __init__.py  test_benchmark.py
docs/: INITIALIZATION_REFACTOR_PLAN.md  aim_integration.md  aim_integration_plan.md  aim_tensorboard_guide.md  cltl_plan.md  fabricpc_port_summary.md  future_strategic_improvements.md  multi_gpu_fix_plan.md  parallelization_plan.md  pdfstuff.txt  rebasing_feature_branch.md  weight_initializers_plan.md
docs/LLM-logs/: codex20260411160651.txt  codex20260411163611.txt  codex20260411164343.txt  codex20260411164643.txt  codex20260411172800.txt  codex20260418101603.txt  codex20260418102642.txt  codex20260418103142.txt  codex20260418104532.txt  codex20260418105329.txt  codex20260419024224.txt  codex20260419055213.txt  codex20260419075421.txt  random-extras.txt  working_log_2026_04_11.txt
docs/dev_plans_archive/: COMPARISON_checkpointing.md  INITIALIZATION_REFACTOR_PLAN.md  ROADMAP.md  aim_integration_plan.md  aim_tracking_state_plan.md  architectural_refactor_proposal.md  bayesian_pc_transformer.md  conv_improvements_and_retrospective.md  currentPYnJAXplan.md  deprecate_and_remove_pre_activation_plan.md  design_culprits_checkpointing.md  friendly_model_definition_plan.md  inferernce_algorithm_class_plan.md  momentum_sgd_inference_plan.md  muPC_arbitrary_graph_upgrade_plan.md  muPC_depth_scaling_debug.md  muPC_design_plan.md  muPC_edge_based_upgrade_plan.md  multi_gpu_edge_case.txt  multi_gpu_fix_plan.md  navier_stokes_energy_executive_brief.md  navier_stokes_energy_implementation_notes.md  navier_stokes_energy_math_companion.md  navier_stokes_energy_plan.md  navier_stokes_energy_presentation_summary.md  parallelization_plan.md  refactor_gradients_for_better_abstraction.md  single_cuda_stack_check.md  storkey_hopfield_analysis.md  storkey_hopfield_plan.md  trainer_consolidation_plan.md  transformer_mupc_variance_plan.md
docs/user_guides/: 00_index.md  01_installation.md  02_quickstart.md  03_how_predictive_coding_works.md  04_building_models.md  05_initialization_and_scaling.md  06_custom_nodes.md  07_optimizers.md  08_training_and_evaluation.md  09_experiment_tracking.md  10_api_nodes.md  11_api_activations_and_energy.md  12_api_inference.md  13_api_initializers.md  14_api_data.md  15_api_experiments.md  16_troubleshooting.md  aim_tensorboard_guide.md  notebook_parity_regression.md
examples/: PC_backprop_compare.py  README.md  bayesian_pc_lm_demo.py  bayesian_pc_transformer.py  benchmark_optimizers.py  custom_node.py  hj_ot_grid_search.py  hopfield_demo.py  jpc_fc_resnet_compare.py  mnist_advanced.py  mnist_aim_tracking.py  mnist_conv_demo.py  mnist_cyclic_graph.py  mnist_demo.py  mnist_demo_edit.py  mnist_demo_with_identity_node.py  mnist_lateral_connections.py  mnist_multi_gpu.py  mnist_navier_stokes_hj_ot.py  mnist_navier_stokes_smoke.py  mupc_ab_experiment.py  mupc_demo.py  mupc_mnist_demo.py  navier_stokes_acceptance.py  navier_stokes_standard_adam_test.py  notebook_parity_regression.py  precision_experiment.py  resnet18_cifar10_demo.py  split_cifar100_continual.py  split_mnist_causal.py  split_mnist_continual.py  split_mnist_quick.py  storkey_hopfield_demo.py  storkey_hopfield_diagnostic.py  storkey_hopfield_fewshot.py  storkey_hopfield_recall.py  transformer_demo.py  transformer_tuning.py  transformer_v2_demo.py
examples/scaling/: mlp_scaling.py  scaling_analysis_plots.py
fabricpc/: README.md  __init__.py  serialization.py
fabricpc/builder/: __init__.py  edge.py  graph_builder.py  graph_construction.py  namespace.py
fabricpc/continual/: __init__.py  augmentation.py  causal.py  config.py  data.py  data_cifar.py  ewc.py  gradient_protection.py  native_nodes.py  nodes.py  optimal_transport.py  parity.py  support.py  trainer.py  transweave.py  utils.py  weight_causal.py
fabricpc/core/: __init__.py  _frozen.py  activations.py  depth_metric.py  energy.py  graph_pc.py  inference.py  initializers.py  learning.py  mupc.py  positional.py  precision.py  registry.py  scaling.py  sequential_pc.py  state_ops.py  topology.py  types.py
fabricpc/examples/: mnist_advanced.py  (+3 more)
scripts/: _parity_check_ar.py  _parity_check_unified.py  diagnose_deep_mupc.py  install.py
tests/: __init__.py  conftest.py  test_auto_node_grad.py  test_causal_batching.py  test_conv_pool_integration.py  test_convolutional.py  test_cuda_detect.py  test_dashboarding_trackers.py  test_energy.py  test_external_custom_node.py  test_fabricpc.py  test_fabricpc_extended.py  test_fabricpc_jax.py  test_fabricpc_jax_extended.py  test_fluid_eval.py  test_identity_node.py  test_immutable_config.py  test_inference_order.py  test_initializers.py  test_multi_gpu.py  test_mupc.py  test_native_nodes.py  test_ndim_shapes.py  test_ngd_precision.py  test_node_registry.py  test_notebook_parity.py  test_optimizers.py  test_pooling.py  test_precision_weighting.py  test_property.py  test_rope.py  test_serialization.py  test_shapes.py  test_single_cuda_stack.py  test_state_initializer.py  test_storkey_hopfield.py  test_support_batching.py  test_train_autoregressive_tracking.py  test_train_backprop.py  test_transformer_mupc.py  (+4 more)
(+100 files in other folders)
