[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabricpc"
version = "0.3.1"
description = "A flexible, performant predictive coding library using JAX"
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "FabricPC Authors"}
]
keywords = ["predictive-coding", "jax", "neural-networks", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Private :: Do Not Upload",
]

dependencies = [
    "jax",
    "jaxlib",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
    "flax>=0.7.5",
    "chex>=0.1.84",
    "jaxtyping>=0.2.23",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "optuna",
]

# `optional-dependencies` is computed at build time by `setup.py` because
# the `[all]` extra needs to inject the right `[cuda12]` / `[cuda13]` based
# on what `nvidia-smi` reports for the host — and PEP 508 environment
# markers have no CUDA-version field. All other extras are also defined in
# `setup.py` (setuptools requires the full set when this field is dynamic).
dynamic = ["optional-dependencies"]

[tool.setuptools]
# `_cuda_detect` is build/install tooling imported by `setup.py` and
# `scripts/install.py`. Listing it here ensures it's included in the
# sdist so `pip install .` (non-editable) works — without this,
# setup.py would fail to import the helper during a non-editable build.
py-modules = ["jax_setup", "_cuda_detect"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fabricpc*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''