[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabricpc"
version = "0.3.1"
description = "A flexible, performant predictive coding library using JAX"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "FabricPC Authors"}
]
keywords = ["predictive-coding", "jax", "neural-networks", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Private :: Do Not Upload",
]

dependencies = [
    "jax",
    "jaxlib",
    "optax>=0.1.7",
    "orbax-checkpoint>=0.4.0",
    "flax>=0.7.5",
    "chex>=0.1.84",
    "jaxtyping>=0.2.23",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "optuna",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "black[colorama]==26.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
tfds = [
    "tensorflow-datasets>=4.9.0",
    "tensorflow>=2.15.0",
    # tfds imports the third-party importlib_resources backport unconditionally
    # in its download path (dataset_builder.py), but declares it only for
    # python_version < "3.9". Without this, the first download of any dataset
    # fails with ModuleNotFoundError on Python >= 3.9.
    "importlib_resources",
]
experiments = [
    "scipy>=1.10.0",
]
viz = [
    "plotly>=5.0.0",
    "kaleido>=0.2.1",
    "pandas>=2.0.0",
    # Aim needs aimrocks (RocksDB), which ships no Windows wheels, and supports Python <=3.12
    # only; skipped on Windows and on 3.13 so [viz]/[all] still resolve everywhere.
    "aim>=3.0.0; python_version < '3.13' and platform_system != 'Windows'",
]
# Backend selection. Each delegates the full coupled wheel set to JAX
# (jaxlib, plugin, pjrt, nvidia-*); FabricPC pins none of those versions.
cpu = [
    "jax[cpu]",
]
cuda12 = [
    "jax[cuda12]",
]
cuda13 = [
    "jax[cuda13]",
]
# Everything except the hardware backend. Append a backend extra for GPU
# (e.g. ".[all,cuda12]"), or omit it for the CPU build from the base jax dependency.
all = [
    "fabricpc[dev,tfds,experiments,viz]",
]

[tool.setuptools]
py-modules = ["jax_setup"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fabricpc*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
target-version = "py310"
# Lint the shipped package only. examples/ and scripts/ deliberately configure
# JAX (set_jax_flags_before_importing_jax) before `import jax`, which is E402 by
# design; tests/ run under pytest and are not shipped. Scoping ruff to fabricpc/
# enforces B006 + the default pyflakes/pycodestyle rules where they matter,
# without flagging the intentional import-ordering idiom in demo/diagnostic code.
extend-exclude = [".git", ".venv", "build", "dist", "examples", "tests", "scripts"]

[tool.ruff.lint]
# B006 (mutable-argument-default) forbids list/dict/set literal defaults — the
# genuinely dangerous shared-mutable-state bug. It does NOT flag custom
# constructor calls such as `= GaussianEnergy()`; those stateless value-object
# defaults are the convention this package standardizes on, made
# safe-by-construction by freezing the config base classes (ActivationBase /
# EnergyFunctional / InitializerBase are immutable after construction).
#
# `extend-select` runs B006 on top of ruff's default ruleset (pyflakes F +
# pycodestyle E4/E7/E9), which the codebase is kept clean against. B008
# (function-call-in-default-argument) is intentionally NOT enabled — it would
# flag every `= GaussianEnergy()` / `= KaimingInitializer()` signature default,
# which is exactly the pattern being standardized on.
extend-select = ["B006"]
